--- a/fuse/FuseDebug.entitlements
+++ b/fuse/FuseDebug.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.tadanoasile.com.debug</string>
+		<string>iCloud.com.tadanoasile.fuse</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
